--- a/hlox.cabal
+++ b/hlox.cabal
@@ -18,7 +18,7 @@ common warnings
 
 library
     import:           warnings
-    exposed-modules:  MyLib
+    exposed-modules:  HLox
     -- other-modules:
     -- other-extensions:
     build-depends:    base ^>=4.18.2.1
