--- a/hlox.cabal
+++ b/hlox.cabal
@@ -22,6 +22,10 @@ library
     -- other-modules:
     -- other-extensions:
     build-depends:    base ^>=4.18.2.1
+                    , text
+                    , filepath
+                    , unordered-containers
+                    , streaming
     hs-source-dirs:   src
     default-language: GHC2021
 
