--- a/hlox.cabal
+++ b/hlox.cabal
@@ -19,6 +19,7 @@ common warnings
 library
     import:           warnings
     exposed-modules:  HLox
+                    , HLox.Scanner
     -- other-modules:
     -- other-extensions:
     build-depends:    base ^>=4.18.2.1
@@ -26,11 +27,13 @@ library
                     , filepath
                     , unordered-containers
                     , streaming
-                    , lens
+                    , lens ^>=5.3.0
                     , mtl
                     , transformers
+                    , monad-loops
     hs-source-dirs:   src
     default-language: GHC2021
+    default-extensions: OverloadedStrings, LambdaCase, TupleSections, TemplateHaskell
 
 executable hlox
     import:           warnings
