--- a/hlox.cabal
+++ b/hlox.cabal
@@ -23,17 +23,21 @@ library
     -- other-modules:
     -- other-extensions:
     build-depends:    base ^>=4.18.2.1
-                    , text
                     , filepath
-                    , unordered-containers
-                    , streaming
                     , lens ^>=5.3.0
-                    , mtl
-                    , transformers
                     , monad-loops
+                    , mtl
+                    , streaming
+                    , text
+                    , transformers
+                    , unordered-containers
     hs-source-dirs:   src
     default-language: GHC2021
-    default-extensions: OverloadedStrings, LambdaCase, TupleSections, TemplateHaskell
+    default-extensions: LambdaCase
+                      , OverloadedStrings
+                      , TemplateHaskell
+                      , TupleSections
+                      , ViewPatterns
 
 executable hlox
     import:           warnings
