--- a/hlox.cabal
+++ b/hlox.cabal
@@ -61,15 +61,16 @@ test-suite hlox-test
     hs-source-dirs:   test
     main-is:            Driver.hs
     build-depends:     base ^>=4.18.2.1
+                     , aeson
+                     , aeson-pretty
+                     , filepath
                      , hlox
                      , hspec
+                     , lens
                      , tasty
                      , tasty-discover
                      , tasty-golden
                      , tasty-hspec
                      , text
-                     , aeson
-                     , lens
-                     , filepath
     build-tool-depends: tasty-discover:tasty-discover
     other-modules:      HLox.Scanner.Test
