--- a/hlox.cabal
+++ b/hlox.cabal
@@ -29,6 +29,8 @@ library
     -- other-modules:
     -- other-extensions:
     build-depends:    base ^>=4.18.2.1
+                    , containers
+                    , extra
                     , filepath
                     , lens ^>=5.3.0
                     , monad-loops
@@ -37,7 +39,6 @@ library
                     , text
                     , transformers
                     , unordered-containers
-                    , containers
     hs-source-dirs:   src
 
 executable hlox
