--- a/hlox.cabal
+++ b/hlox.cabal
@@ -21,11 +21,15 @@ common options
                       , TemplateHaskell
                       , TupleSections
                       , ViewPatterns
+                      , QuasiQuotes
 
 library
     import:           options
     exposed-modules:  HLox
                     , HLox.Scanner
+                    , HLox.Scanner.Types
+                    , HLox.Parser.Types
+                    , HLox.Parser
     -- other-modules:
     -- other-extensions:
     build-depends:    base ^>=4.18.2.1
@@ -39,6 +43,8 @@ library
                     , text
                     , transformers
                     , unordered-containers
+                    , string-interpolate
+                    , formatting
     hs-source-dirs:   src
 
 executable hlox
@@ -57,6 +63,7 @@ test-suite hlox-test
     import:           options
     default-language: GHC2021
     other-modules:    HLox.Scanner.Test
+                    , HLox.Parser.Test
     -- other-extensions:
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
