--- a/hlox.cabal
+++ b/hlox.cabal
@@ -26,12 +26,14 @@ common options
 library
     import:           options
     exposed-modules:  HLox
-                    , HLox.Util
-                    , HLox.Types
+                    , HLox.Interpreter
+                    , HLox.Interpreter.Types
+                    , HLox.Parser
+                    , HLox.Parser.Types
                     , HLox.Scanner
                     , HLox.Scanner.Types
-                    , HLox.Parser.Types
-                    , HLox.Parser
+                    , HLox.Types
+                    , HLox.Util
     -- other-modules:
     -- other-extensions:
     build-depends:    base ^>=4.18.2.1
@@ -66,8 +68,9 @@ executable hlox
 test-suite hlox-test
     import:           options
     default-language: GHC2021
-    other-modules:    HLox.Scanner.Test
+    other-modules:    HLox.Interpreter.Test
                     , HLox.Parser.Test
+                    , HLox.Scanner.Test
     -- other-extensions:
     type:             exitcode-stdio-1.0
     hs-source-dirs:   test
@@ -80,6 +83,7 @@ test-suite hlox-test
                      , hspec
                      , lens
                      , string-conversions
+                     , string-interpolate
                      , tasty
                      , tasty-discover
                      , tasty-golden
