--- a/hlox.cabal
+++ b/hlox.cabal
@@ -38,6 +38,7 @@ library
     -- other-extensions:
     build-depends:    base ^>=4.18.2.1
                     , containers
+                    , either
                     , exceptions
                     , extra
                     , filepath
