Hook up interpreter

--- a/hlox.cabal
+++ b/hlox.cabal
@@ -47,6 +47,7 @@ library
                     , monad-loops
                     , mtl
                     , streaming
+                    , string-conversions
                     , string-interpolate
                     , text
                     , transformers
