Refactor environment with At from lens

--- a/hlox.cabal
+++ b/hlox.cabal
@@ -42,6 +42,7 @@ common options
                       , ViewPatterns
                       , QuasiQuotes
                       , LambdaCase
+                      , TypeFamilies
 
 library
     import:           options
