Parse function declarations

--- a/hlox.cabal
+++ b/hlox.cabal
@@ -27,6 +27,7 @@ common deps
                    , string-conversions
                    , string-interpolate
                    , text
+                   , time
                    , transformers
                    , unordered-containers
                    , vector
