--- a/hlox.cabal
+++ b/hlox.cabal
@@ -31,6 +31,7 @@ common deps
                    , time
                    , transformers
                    , unordered-containers
+                   , uuid
                    , vector
 
 
